--- a/_posts/0000-01-02-rsood0931.md
+++ b/_posts/0000-01-02-rsood0931.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to our GitHubteacher's slide!"
 ---
 This is rsood0931's slide
 Use the left arrow to go back!
