--- a/_posts/0000-01-02-rsood0931.md
+++ b/_posts/0000-01-02-rsood0931.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our GitHubteacher's slide!"
 ---
-This is rsood0931's slide
+This is my awesome slide slide
 Use the left arrow to go back!
